# draft-of-autoware-vector-map

./: README.md
autoware_vector_map/: CMakeLists.txt  README.md  package.xml
autoware_vector_map/include/autoware_vector_map/: core.h
autoware_vector_map/include/autoware_vector_map/api/: vecor_map_api.h
autoware_vector_map/include/autoware_vector_map/bridge/boost/: geometry_registration.h
autoware_vector_map/include/autoware_vector_map/bridge/ogr/: feature_conversion.h  geometry_conversion.h
autoware_vector_map/include/autoware_vector_map/bridge/ros/: geometry_conversion.h  marker_conversion.h  message_conversion.h
autoware_vector_map/include/autoware_vector_map/core/: geometries.h
autoware_vector_map/include/autoware_vector_map/core/vector_map/: attributes.h  features.h  relationships.h
autoware_vector_map/include/autoware_vector_map/future/: filesystem.h  optional.h  void_t.h
autoware_vector_map/include/autoware_vector_map/geometry/: geometry.h
autoware_vector_map/include/autoware_vector_map/graph/: graph.h
autoware_vector_map/include/autoware_vector_map/io/: gpkg_interface.h
autoware_vector_map/include/autoware_vector_map/io/gpkg_interface/: gpkg_interface_impl.h
autoware_vector_map/include/autoware_vector_map/traits/: gpkg_contents.h  has_geometry.h
autoware_vector_map/include/autoware_vector_map/traits/gpkg_contents/vector_map/: attributes.h  features.h  relationships.h
autoware_vector_map/include/autoware_vector_map/util/: helper_functions.h  to_debug_string.h
autoware_vector_map/launch/: vector_map_loader.launch
autoware_vector_map/scripts/autoware_vector_map/: .gitignore  align_vector_map_to_pointcloud.py  create_empty_vector_map.py  pyproject.toml  vector_map_preprocessor.py
autoware_vector_map/scripts/autoware_vector_map/autoware_vector_map/: geo_util.py  layer.py  map_api.py  map_util.py
autoware_vector_map/scripts/autoware_vector_map/autoware_vector_map/create_features/: __init__.py  create_adjacent_lane_boundaries.py  create_adjacent_lanes.py  create_intersect_relationships.py  create_lane_boundaries.py  create_lane_connections.py  create_lane_section_connections.py  create_lane_sections.py
autoware_vector_map/src/autoware_vector_map/api/: vector_map_api.cpp
autoware_vector_map/src/autoware_vector_map/bridge/ogr/: geometry_conversion.cpp
autoware_vector_map/src/autoware_vector_map/bridge/ros/: geometry_conversion.cpp  marker_conversion.cpp
autoware_vector_map/src/autoware_vector_map/core/: geometries.cpp
autoware_vector_map/src/autoware_vector_map/geometry/: geometry.cpp
autoware_vector_map/src/autoware_vector_map/io/gpkg_interface/: gpkg_interface.cpp
autoware_vector_map/src/vector_map_loader_node/: main.cpp  vector_map_loader_node.cpp  vector_map_loader_node.h
autoware_vector_map/src/vector_map_visualizer_node/: main.cpp  vector_map_visualizer_node.cpp  vector_map_visualizer_node.h
autoware_vector_map/test/: test_autoware_vector_map.test
autoware_vector_map/test/src/: test_autoware_vector_map.cpp
autoware_vector_map_examples/: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
autoware_vector_map_examples/doc/: vector-map-creation.md
autoware_vector_map_examples/include/: examples_common.h
autoware_vector_map_examples/share/map/odaiba-sample/: odaiba-sample-tf.launch  odaiba-sample.gpkg  odaiba-sample.qgz  odaiba-sample.rviz  odaiba-sample_preprocess.gpkg
autoware_vector_map_examples/src/example1/: main.cpp
autoware_vector_map_examples/src/example2/: main.cpp
autoware_vector_map_msgs/: CMakeLists.txt  package.xml
autoware_vector_map_msgs/msg/: BinaryGpkgMap.msg
