[tool.poetry]
name = "autoware_vector_map"
version = "0.1.0"
description = ""
authors = ["Kenji Miyake <kenji.miyake@tier4.jp>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
geopandas = "^0.6.2"
fiona = "^1.8.13"
shapely = "^1.6.4"
inflect = "^3.0.2"
open3d = "^0.8.0"
numpy = "^1.17.4"
GDAL = "2.2.3"

[tool.poetry.dev-dependencies]
ipython = "^7.10.2"
ipdb = "^0.12.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
